# Dasher-GTK

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  InputFilterHierarchy.txt  README.md  analytics-events.json
.github/workflows/: cmake-multi-platform.yml  dco.yml  publish.yml  validate-metadata.yml
packaging/: build-appimage.sh  org.alternativeinterface.dasher.desktop  org.alternativeinterface.dasher.metainfo.xml
packaging/flatpak/: org.alternativeinterface.dasher.yaml
src/: ButtonMapper.cpp  ButtonMapper.h  ColorDisplayWidget.h  ColorDropdown.h  DasherController.cpp  DasherController.h  FakeInput.h  ImageButton.h  InputTest.h  MainWindow.cpp  MainWindow.h  MessageOverlay.h  PaletteProxy.h  RenderingCanvas.cpp  RenderingCanvas.h  UIStyle.css  dasher.gresource.xml  main.cpp
src/Analytics/: AnalyticsClient.cpp  AnalyticsClient.h  AnalyticsSettings.cpp  AnalyticsSettings.h  CrashReporter.cpp  CrashReporter.h  EngineLogRingBuffer.cpp  EngineLogRingBuffer.h  PiiScrubber.cpp  PiiScrubber.h
src/Engine/: CommandRenderer.cpp  CommandRenderer.h  DasherBridge.cpp  DasherBridge.h
src/Input/: DwellClickHandler.cpp  DwellClickHandler.h  InputManager.cpp  InputManager.h
src/Input/Joystick/: JoystickInput.cpp  JoystickInput.h  SDLJoystick.cpp  SDLJoystick.h
src/Output/: DirectModeService.cpp  DirectModeService.h  TtsService.cpp  TtsService.h
src/Preferences/: DeviceSettingsProvider.h  PreferencesWindow.cpp  PreferencesWindow.h  SettingsHelp.cpp  SettingsHelp.h  SettingsInputMapping.cpp  SettingsInputMapping.h  SettingsMode.cpp  SettingsMode.h  SettingsPageBase.h  SettingsSection.h  SyncedEnum.h  SyncedSpinButton.h
src/Preferences/Licenses/: GtkLicense.h  PugiLicense.h  SDLLicense.h
src/UIComponents/: ColorDisplayWidget.h  EnumDropdown.h  ImageToggleButton.h  KeyboardSetupDialog.h  MessageOverlay.h  PopoverBox.h  PopoverMenuButtonInfo.h  RenderingCanvas.cpp  RenderingCanvas.h  SyncedColorDropdown.h  SyncedEnumDropdown.h  SyncedSlider.h  SyncedSpinButton.h  SyncedStringDropdown.h  SyncedSwitch.h  SyncedTextbox.h
tests/: CMakeLists.txt  test_analytics_client.cpp  test_crash_file_roundtrip.cpp  test_dwell_click_handler.cpp  test_engine_log_ring_buffer.cpp  test_pii_scrubber.cpp
